# cloud-agent-os

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: python-package-conda.yml  python-package-pdm.yml
core/: audit.py  context.py  control_plane.py  executor.py  models.py  orchestrator.py  policy.py  scheduler.py
core/agent/: planner.py
core/agent/planners/: langchain.py  schema.py
core/control/: __init__.py  control_plane.py  models.py  registry.py
core/control/providers/: __init__.py  base.py  ctyun.py
core/executors/: __init__.py  executor.py
core/schedulers/: dag.py
src/: audit.py  control_plane.py  executor.py  models.py  orchestrator.py  planner.py  policy.py  scheduler.py
src/planners/: langchain.py  schema.py
tests/: __init__.py  conftest.py  test_context.py  test_executor.py  test_integration.py  test_models.py  test_orchestrator.py
